--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
         <h1>Nos photographes</h1>
     </header>
     <main id="main">
-      <a href="wwww.google.fr"><div class="photographer_section"></div>
-      </a>
+      <div class="photographer_section"></div>
+      
     </main>
     <script src="scripts/factories/Photographer.js"></script>
     <script src="scripts/pages/index.js"></script>
