--- a/photographer.html
+++ b/photographer.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <link href="css/style.css" rel="stylesheet" type="text/css" />
+    <link href="css/photographer.css" rel="stylesheet" type="text/css" />
     <meta charset="utf-8">
     <link rel="icon" type="image/png" href="assets/favicon.png">
     <link href="https://fonts.googleapis.com/css?family=DM+Sans&display=swap" rel="stylesheet">
@@ -11,7 +11,6 @@
     <header>
       <img src="assets/images/logo.png" class="logo" />
     </header>
-    <div id="photo-head"></div>
     <main id="main">
       <div class="photograph-header">
         <div id="photographer-name"></div>
