--- a/photographer.html
+++ b/photographer.html
@@ -11,14 +11,16 @@
     <header>
       <img src="assets/images/logo.png" class="logo" />
     </header>
-    <main id="main">
-      <div id="photographer_card_header"></div>
+      <div class="container">
+        <div id="photographer_card_header"></div>
         <button class="contact_button" onclick="displayModal()">Contactez-moi</button>
-    </main>
-    <div class="lightbox"></div>
-    <div id="box"></div>
-    <div id="contact_modal">
-			<div class="modal">
+        <!--Menu dropdown-->
+         <div id="menu_dropdown"></div>
+         <!--Boxes pour des images-->
+         <div id="photos"></div>
+         
+         <div id="contact_modal">
+			  <div class="modal">
 				<header>
           <h2>Contactez-moi</h2>
           <img src="assets/icons/close.svg" onclick="closeModal()" />
