--- a/photographer.html
+++ b/photographer.html
@@ -38,11 +38,13 @@
 				</form>
 			</div>
 		</div>
+    <!----page-->
     <script src="./scripts/pages/photographer.js" defer></script>
+    <!-----factories-->
     <script src="./scripts/factories/personal_photographer.js" defer></script>
     <script src="./scripts/factories/lightbox.js"></script>
     <script src="./scripts/factories/menu.js"></script>
-    
+    <!--utilles-->
     <script src="/scripts/utils/contactForm.js"></script>
   </body>
 </html>
