--- a/photographer.html
+++ b/photographer.html
@@ -44,6 +44,7 @@
     <script src="./scripts/factories/personal_photographer.js" defer></script>
     <script src="./scripts/factories/lightbox.js"></script>
     <script src="./scripts/factories/menu.js"></script>
+    <source src="./scripts/factories/accueil.js"></script>
     <!--utilles-->
     <script src="/scripts/utils/contactForm.js"></script>
   </body>
