--- a/index.html
+++ b/index.html
@@ -9,13 +9,13 @@
   </head>
   <body>
     <header>
-      <a href="./index.html">
+      <a href="./index.html" aria-label="button">
         <img src="assets/images/logo.png" class="logo" />
       </a>
         <h1>Nos photographes</h1>
     </header>
     <main id="main">
-      <div class="photographer_section"></div>
+      <div class="photographer_section" aria-lable="section of every photographer"></div>
       
     </main>
     <script src="scripts/factories/accueil.js"></script>
