--- a/photographer.html
+++ b/photographer.html
@@ -40,8 +40,8 @@
 			</div>
 		</div>
     <!----page-->
-    <script src="./scripts/pages/monika.js" defer></script>
-    <script src="./scripts/pages/test.js" type="module"></script>
+    <script src="./scripts/pages/photographerPage.js" defer></script>
+    <script src="./scripts/pages/app.js" type="module"></script>
     <!-----factories-->
     <script src="./scripts/factories/personal_photographer.js" defer></script>
     <script src="./scripts/utils/like.js"></script>
