working on the gallery

--- a/photographer.html
+++ b/photographer.html
@@ -41,7 +41,7 @@
 		</div>
     <!----page-->
     <script src="./scripts/pages/photographerPage.js" defer></script>
-    <script src="./scripts/pages/app.js" type="module"></script>
+   <!--<script src="./scripts/pages/app.js" type="module"></script>-->
     <!-----factories-->
     <script src="./scripts/factories/personal_photographer.js" defer></script>
     <script src="./scripts/utils/like.js"></script>
