--- a/photographer.html
+++ b/photographer.html
@@ -20,7 +20,7 @@
         <!--Menu dropdown-->
          <div id="menu_dropdown" aria-lable="openning menu"></div>
          <!--Boxes pour des images-->
-         <div id="container_images" aria-lable="section photos"></div>
+         <section id="container_images" aria-lable="section photos"></section>
          <section class="lightbox_modal" aria-hidden="true" aria-modal="true"></section>
              
              <main id="main" class="main"></main>
