--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
     <link href="css/style.css" rel="stylesheet" type="text/css"/>
     <meta charset="utf-8">
@@ -9,8 +9,8 @@
   </head>
   <body>
     <header>
-      <a href="./index.html" aria-label="button">
-        <img src="assets/images/logo.png" class="logo"/>
+      <a href="./index.html" aria-label = "button">
+        <img src="assets/images/logo.png" class="logo"alt="logo"/>
       </a>
         <h1>Nos photographes</h1>
     </header>
