--- a/photographer.html
+++ b/photographer.html
@@ -1,14 +1,11 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
     <link href="css/photographer.css" rel="stylesheet" type="text/css" />
     <meta charset="utf-8">
     <link rel="icon" type="image/png" href="assets/favicon.png">
     <link href="https://fonts.googleapis.com/css?family=DM+Sans&display=swap" rel="stylesheet">
-    <script
-    src="https://kit.fontawesome.com/30340057e5.js"
-    crossorigin="anonymous"
-  ></script>
+    <script src="https://kit.fontawesome.com/30340057e5.js" crossorigin="anonymous"></script>
     <title>Fisheye - photographe </title>
   </head>
   <body>
@@ -22,17 +19,11 @@
          <!--Boxes pour des images-->
          <section id="container_images" aria-lable="section photos"></section>
          <section class="lightbox_modal" aria-hidden="true" aria-modal="true"></section>
-             
-             <main id="main" class="main"></main>
-          <section
-        id="contact_modal"
-        aria-hidden="true"
-        role="dialog"
-        aria-modal="true"
+         <main id="main" class="main"></main>
+        <section id="contact_modal" aria-hidden="true" role="dialog" aria-modal="true"
         ></section>
-      
         <footer id="likes"></footer>
-		</div>
+		  </div>
   
 
 
