--- a/photographer.html
+++ b/photographer.html
@@ -3,14 +3,15 @@
   <head>
     <link href="css/photographer.css" rel="stylesheet" type="text/css" />
     <meta charset="utf-8">
-    <link rel="icon" type="image/png" href="assets/favicon.png">
     <link href="https://fonts.googleapis.com/css?family=DM+Sans&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/30340057e5.js" crossorigin="anonymous"></script>
     <title>Fisheye - photographe </title>
   </head>
   <body>
-    <header>
-      <img src="assets/images/logo.png" class="logo" role="button" />
+    <header role="banner">
+      <a href="./index.html" tabindex="0">
+        <img src="./assets/images/logo.png" class="logo" alt="Fisheye Home page" />
+      </a>
     </header>
       <div class="container">
         <div id="photographer_card_header"></div>
