--- a/photographer.html
+++ b/photographer.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <header role="banner">
-      <a href="./index.html" tabindex="0">
+      <a href="./index.html" tabindex="0" class="switch">
         <img src="./assets/images/logo.png" class="logo" alt="Fisheye HomePage"/>
       </a>
     </header>
