--- a/photographer.html
+++ b/photographer.html
@@ -10,7 +10,7 @@
   <body>
     <header role="banner">
       <a href="./index.html" tabindex="0" class="switch">
-        <img src="./assets/images/logo.png" class="logo" alt="Fisheye HomePage"/>
+        <img src="./assets/images/logo.png" class="logo" alt="Fisheye HomePage" tabindex="0" class="switch"/>
       </a>
     </header>
       <div class="container">
@@ -26,11 +26,9 @@
          <!--Form-->
         <section id="contact_modal" aria-hidden="true" role="dialog" aria-modal="true"
         ></section>
+        <!--footer-->
         <footer id="likes"></footer>
 		  </div>
-  
-
-
     <!-----factories-->
     <script src="./scripts/factories/personal_photographer.js" defer></script>
     <script src="./scripts/factories/gallery.js"></script>
